--- a/TP1/Presentacion/Presentacionfinal.tex
+++ b/TP1/Presentacion/Presentacionfinal.tex
@@ -374,10 +374,10 @@
 	\begin{table}
 	  \begin{tabular}[t]{|l|l|r|r|r|}
 	    \hline
-		 & \textbf{GRUPO} & \textbf{N} & \textbf{Rango promedio} & \textbf{Suma de rangos} \\ \hline
-		\textbf{T\_RESP} & No Conocidas & 1439 & 1128.38 & 1623740 \\ \hline
-		  & Conocidas & 769 & 1059.81 & 814996 \\ \hline
-		  & \textit{Total} & 2208 &   &   \\ \hline
+		\textbf{GRUPO} & \textbf{N} & \textbf{Rango promedio} & \textbf{Suma de rangos} \\ \hline
+		No Conocidas & 1439 & 1128.38 & 1623740 \\ \hline
+		Conocidas & 769 & 1059.81 & 814996 \\ \hline
+		\textit{Total} & 2208 &   &   \\ \hline
 	  \end{tabular}   \begin{tabular}[t]{|l|r|}
 	    \hline
 		& \textbf{T\_RESP} \\ \hline
@@ -389,12 +389,12 @@
 	\end{table}
 
 	\begin{table}
-	  \begin{tabular}[t]{|l|l|r|r|r|}
+	  \begin{tabular}[t]{|l|r|r|r|}
 	    \hline
-		  & \textbf{GRUPO} & \textbf{N} & \textbf{Rango promedio} & \textbf{Suma de rangos} \\ \hline
-		\textbf{T\_RESP} & Conocidas & 769 & 750.4 & 577060.5 \\ \hline
-		  & Conocidas Vistas & 660 & 673.75 & 444674.5 \\ \hline
-		  & \textit{Total} & 1429 &   &   \\ \hline
+		\textbf{GRUPO} & \textbf{N} & \textbf{Rango promedio} & \textbf{Suma de rangos} \\ \hline
+		Conocidas & 769 & 750.4 & 577060.5 \\ \hline
+		Conocidas Vistas & 660 & 673.75 & 444674.5 \\ \hline
+		\textit{Total} & 1429 &   &   \\ \hline
 	  \end{tabular}   \begin{tabular}[t]{|l|r|}
 	    \hline
 		& \textbf{T\_RESP} \\ \hline
@@ -408,10 +408,10 @@
 	\begin{table}
 	  \begin{tabular}[t]{|l|l|r|r|r|}
 	    \hline
-		& \textbf{GRUPO} & \textbf{N} & \textbf{Rango promedio} & \textbf{Suma de rangos} \\ \hline
-	      \textbf{T\_RESP} & No Conocidas & 1439 & 1104.78 & 1589772 \\ \hline
-		& Conocidas Vistas & 660 & 930.57 & 614178 \\ \hline
-		& \textit{Total} & 2099 &   &   \\ \hline
+		\textbf{GRUPO} & \textbf{N} & \textbf{Rango promedio} & \textbf{Suma de rangos} \\ \hline
+		No Conocidas & 1439 & 1104.78 & 1589772 \\ \hline
+		Conocidas Vistas & 660 & 930.57 & 614178 \\ \hline
+		\textit{Total} & 2099 &   &   \\ \hline
 	  \end{tabular}   \begin{tabular}[t]{|l|r|}
 	    \hline
 		& \textbf{T\_RESP} \\ \hline
@@ -436,10 +436,45 @@
 	  \begin{tabular}[t]{|l|r|r|r|r|r|r|r|r|r|}
 	    \hline
 		  & \multicolumn{2}{|c|}{Prueba de Levene} &  \multicolumn{7}{|c|}{Prueba T para la igualdad de medias} \\ \hline
-		  & F & Sig. & t & gl & Sig. (bilateral) & Dif. de medias & Error típ. de la dif. & \multicolumn{2}{|c|}{95\% confianz. para la dif.} \\ \hline
+		  & F & Sig. & t & gl & Sig. (bil.) & Dif. de medias & Error típ. de la dif. & \multicolumn{2}{|c|}{95\% conf. para la dif.} \\ \hline
 		  &   &   &   &   &   &   &   & Inferior & Superior \\ \hline
 		Varianzas iguales & 2.797 & 0.095 & 1.998 & 2206 & 0.046 & 0.0269 & 0.0134 & 0.0005 & 0.0532 \\ \hline
 		Varianzas no iguales &   &   & 2.041 & 1665.884 & 0.041 & 0.0269 & 0.0132 & 0.001 & 0.0527 \\ \hline
+	  \end{tabular}
+	\end{table}
+
+	\begin{table}
+	  \begin{tabular}[t]{|r|r|r|r|r|}
+	    \hline
+		GRUPO & N & Media & Desviación típ. & Error típ. de la media \\ \hline
+		Conocida  & 769 & 0.8495 & 0.2874 & 0.0104 \\ \hline
+		Conocida Vista & 660 & 0.796 & 0.2779 & 0.0108 \\ \hline
+	  \end{tabular}
+	  \begin{tabular}[t]{|l|r|r|r|r|r|r|r|r|r|}
+	    \hline
+		  & \multicolumn{2}{|c|}{Prueba de Levene} &  \multicolumn{7}{|c|}{Prueba T para la igualdad de medias} \\ \hline
+		  & F & Sig. & t & gl & Sig. (bil.) & Dif. de medias & Error típ. de la dif. & \multicolumn{2}{|c|}{95\% conf. para la dif.} \\ \hline
+		  &   &   &   &   &   &   &   & Inferior & Superior \\ \hline
+	    Varianzas iguales & 2.858 & 0.091 & 3.558 & 1427 & 0 & 0.0534 & 0.015 & 0.024 & 0.0829 \\ \hline
+	    Varianzas no iguales &   &   & 3.567 & 1406.885 & 0 & 0.0534 & 0.015 & 0.0241 & 0.0828 \\ \hline
+	  \end{tabular}
+	\end{table}
+
+	\begin{table}
+	  \begin{tabular}[t]{|r|r|r|r|r|}
+	    \hline
+		GRUPO & N & Media & Desviación típ. & Error típ. de la media \\ \hline
+		No Conocida & 1439 & 0.8764 & 0.3082 & 0.0081 \\ \hline
+		Conocida Vista & 660 & 0.796 & 0.2779 & 0.0108 \\ \hline
+
+	  \end{tabular}
+	  \begin{tabular}[t]{|l|r|r|r|r|r|r|r|r|r|}
+	    \hline
+		  & \multicolumn{2}{|c|}{Prueba de Levene} &  \multicolumn{7}{|c|}{Prueba T para la igualdad de medias} \\ \hline
+		  & F & Sig. & t & gl & Sig. (bil.) & Dif. de medias & Error típ. de la dif. & \multicolumn{2}{|c|}{95\% conf. para la dif.} \\ \hline
+		  &   &   &   &   &   &   &   & Inferior & Superior \\ \hline
+	Varianzas iguales & 11.449 & 0.001 & 5.714 & 2097 & 0 & 0.0803 & 0.0141 & 0.0527 & 0.1079 \\ \hline
+	Varianzas no iguales &   &   & 5.937 & 1406.88 & 0 & 0.0803 & 0.0135 & 0.0538 & 0.1068 \\ \hline
 	  \end{tabular}
 	\end{table}
       \end{frame}
