Nuevos scripts para calcular importancia relativa de rasgos por tipografía/may-min. Imágenes agregadas

--- a/TP1/Presentacion/Presentacionfinal.tex
+++ b/TP1/Presentacion/Presentacionfinal.tex
@@ -30,9 +30,9 @@
 	\frametitle{Objetivo del experimento}
 	\begin{itemize}
 		\item \textbf{Identificar rasgos utilizados por las personas para identificar letras presentadas en distintas tipograf\'ias}\pause
-		\item \alert{¿Cómo lo hacemos?}
+		\item \alert{¿Cómo lo hacemos?}\pause
 		\begin{figure}
-		  \includegraphics[height=0.4\textheight]{graficos/elGrito.jpg}
+		  \includegraphics[height=0.5\textheight]{graficos/elGrito.jpg}
 		  %\caption{Eficiencia vs complejidad para distintas tipografías}
 		\end{figure}
 
@@ -46,6 +46,10 @@
 	\begin{itemize}
 		\item Vamos a intentar identificar algunas letras\ldots
 	\end{itemize}
+
+	\begin{figure}
+	  \includegraphics[height=0.7\textheight]{graficos/bubblebobble.png}
+	\end{figure}
       \end{frame}
 
   %objetivos e hipótesis
@@ -367,12 +371,13 @@
 	  \end{table}
 	\end{columns}
 
-
-
 	\end{frame}
 
  	\begin{frame}
 	\frametitle{Identificaci\'on Humana vs. Observador Ideal}
+	
+	  \alert{GRAFICO DE IMPORTANCIA RELATIVA DE RASGOS POR TIPOGRAFÍA-MAY/MIN}
+
 
 	\end{frame}
 
@@ -408,18 +413,19 @@
 	\frametitle{¿C\'omo Seguimos?}
 	  \begin{block}{Temas Pendientes}
 	    \begin{itemize}
-		\item Aumentar la cantidad de ensayos por persona, y dividirlo en sesiones (equivalente a Fise)
+		\item Aumentar la cantidad de ensayos por persona, y dividirlo en sesiones
 		\item Cantidad de burbujas inicial en función de complejidad de cada letra
 		\item Ajuste de cantidad de burbujas ascendente y descendente
-  		\item Utilización del tiempo como una dimensi\'on más (an\'alisis espacio-temporal)
-		\item Preguntar por letras conocidas mostrando un ejemplo para cada una de ellas. 
+		\item Preguntar por letras conocidas mostrando ejemplos para cada una de ellas. 
 	    \end{itemize}
 	  \end{block} \pause
 
 	  \begin{block}{Trabajo Futuro}
 	   \begin{itemize}
+		\item Incorporación del tiempo como una dimensi\'on más (an\'alisis espacio-temporal)
 		\item Bubbles para habla
 		    \begin{itemize}
+		      \item rasgos relevantes para el reconocimiento de hablantes
 		      \item detección de rasgos para expresividad o emociones
 		    \end{itemize}
 	    \end{itemize}                     
