Nuevos scripts para calcular importancia relativa de rasgos por tipografía/may-min. Imágenes agregadas

--- a/TP1/Presentacion/Presentacionfinal.tex
+++ b/TP1/Presentacion/Presentacionfinal.tex
@@ -46,7 +46,7 @@
 	\begin{itemize}
 		\item Vamos a intentar identificar algunas letras\ldots
 	\end{itemize}
-
+	\pause
 	\begin{figure}
 	  \includegraphics[height=0.7\textheight]{graficos/bubblebobble.png}
 	\end{figure}
