Cambio menor en gráficos del comienzo

--- a/TP1/Presentacion/Presentacionfinal.tex
+++ b/TP1/Presentacion/Presentacionfinal.tex
@@ -30,12 +30,10 @@
 	\frametitle{Objetivo del experimento}
 	\begin{itemize}
 		\item \textbf{Identificar rasgos utilizados por las personas para identificar letras presentadas en distintas tipograf\'ias}\pause
-		\item \alert{¿Cómo lo hacemos?}\pause
-		\begin{figure}
-		  \includegraphics[height=0.5\textheight]{graficos/elGrito.jpg}
-		  %\caption{Eficiencia vs complejidad para distintas tipografías}
-		\end{figure}
-
+		\item \alert{¿Cómo lo hacemos?}
+		  \begin{figure}
+			  \includegraphics[height=0.7\textheight]{graficos/bubblebobble.png}
+		  \end{figure}
 	\end{itemize}
       \end{frame}
 
@@ -44,11 +42,12 @@
       \begin{frame}
 	\frametitle{Todos Somos Sujetos}
 	\begin{itemize}
-		\item Vamos a intentar identificar algunas letras\ldots
+		\item Vamos a intentar identificar algunas letras\ldots\pause
+		\item A continuación vemos una foto de las expresiones en los primeros ensayos\pause
 	\end{itemize}
-	\pause
 	\begin{figure}
-	  \includegraphics[height=0.7\textheight]{graficos/bubblebobble.png}
+		\includegraphics[height=0.6\textheight]{graficos/elGrito.jpg}
+		%\caption{Eficiencia vs complejidad para distintas tipografías}
 	\end{figure}
       \end{frame}
 
@@ -173,6 +172,7 @@
 	\frametitle{Elecci\'on de tipograf\'ias}
 	    \begin{figure}
 		\includegraphics[width=\textwidth]{graficos/letras.png}\\ \pause
+		\alert{CORREGIR LABELS}
 		\includegraphics[width=0.8\textheight]{graficos/complejidadesBoxplot.png}
 		%\caption{Tipograf\'ias y sus Complejidades}
 	    \end{figure}
@@ -207,10 +207,14 @@
 		\item Pocos bloques y ensayos (5 x 100, t $\approx$ 20min)
 		\item Se completa una encuesta al terminar (performance, tipografías famosas)
 		\item Muchas burbujas (todas las letras comienzan igual con la misma cantidad)
-		\item Muy poca información {\bf:-(} (para la mayoría no se alcanza un valor cercano al 52\% de aciertos)\pause
+		\item Muy poca información {\bf:-(}
+		\begin{itemize}
+		    \item Para la mayoría no se alcanza un valor cercano al 52\% de aciertos\pause
+		\end{itemize}
 		\item Muchos gastos en golosinas {\bf:-P}\pause
 	    \end{itemize}
-	\textbf{Posible Soluci\'on}: Ampliar la cantidad de ensayos y ajustar parámetros (bloques y burbujas)
+	\textbf{Posible Soluci\'on:} Aumentar la cantidad de ensayos y ajustar parámetros \\
+	(e.g., cant. burbujas)
 	\end{frame}
 
 	%Recauchutaje
