--- a/TP1/Presentacion/Presentacionfinal.tex
+++ b/TP1/Presentacion/Presentacionfinal.tex
@@ -68,6 +68,7 @@
 		   \mathnormal{\text{complejidad}(l) = \frac{\text{per\'imetro}(l)^2}{\text{superficie}(l)}}
 		  \end{equation*}\pause
 		\item Relación eficiencia/complejidad
+		\item Tiempo necesario para ver todo los rasgos (200ms) 
 	\end{itemize}
 
 	\column{.45\textwidth}
